Revert "More fixes! Woohoo!"
This reverts commit 6ee5a52df584263b1d8b9c613c07c68168e7ccea.

--- a/sonicstadium/topcities/askdread.html
+++ b/sonicstadium/topcities/askdread.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011101000000/http://216.179.151.72/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('http://216.179.151.72/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT><HTML>
  <HEAD>
@@ -76,7 +76,7 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 I have been looking for a place to download Sonic Sat Am videos (not clips), but sadly any other site that I found so far did not have them available for download even though they said they did. So here is my question [ Where can a find a site that has Sonic Sat Am videos still available? ] <br>
 <font color=orange>Sincerely yours, 
 Brian<br>
-<font color=black><i>A:</i> Well, first searchings founded no working vids for you whatsoever, sorry Brian. This is the ultimate crime in Sonic websites, when they say that they have the videos up for download. I tried many a place for Sonic SatAM video clips, or indeed any cartoon clips to help you. But, all the links on each site appear to be dead. But, thanks to a close pal to Dreadknux - Namely Andrew of <a href="https://web.archive.org/20011101000000/http://www.angelfire.com/games3/sonichedgehogs/index.html" target="_blank"><font color=blue>Sonic News</a></font> fame, directed me to a place where indeed, SatAM videos are available. Granted, there isn't much videos, but give Sonique a chance eh? To grab the vids, click on this link to be taken to <a href="https://web.archive.org/20011101000000/http://www.atlantiscity.net/fus/vids.html" target=_blank><font color=blue>FUS - Fans United for SatAM</a></font>. More vids may be added soon, but hey, some proper videos have been found Brian. Hope that helps you.</font></table>
+<font color=black><i>A:</i> Well, first searchings founded no working vids for you whatsoever, sorry Brian. This is the ultimate crime in Sonic websites, when they say that they have the videos up for download. I tried many a place for Sonic SatAM video clips, or indeed any cartoon clips to help you. But, all the links on each site appear to be dead. But, thanks to a close pal to Dreadknux - Namely Andrew of <a href="http://www.angelfire.com/games3/sonichedgehogs/index.html" target="_blank"><font color=blue>Sonic News</a></font> fame, directed me to a place where indeed, SatAM videos are available. Granted, there isn't much videos, but give Sonique a chance eh? To grab the vids, click on this link to be taken to <a href="http://www.atlantiscity.net/fus/vids.html" target=_blank><font color=blue>FUS - Fans United for SatAM</a></font>. More vids may be added soon, but hey, some proper videos have been found Brian. Hope that helps you.</font></table>
 <p>
 
 <table border=1 width=100%><tr><td><div align=center>
@@ -97,7 +97,7 @@ If it is problems with hints that you want, don't hesitate to e-mail me again - 
 <font size=2 color=green><b><i>Q:</i> Where are the fangames like a sonic fangame site? 
 <br>
 <font color=orange>From Tails<br>
-<font color=black><i>A:</i> Well, um, there are Fan Games for your delectation in the Sonic Fan Club, right here in the Sonic Stadium. But if it's more you're after, head to my buddy Rlan's site, Sonic Fan Games HQ. There are absolutely tons of Fan Games for your needs. Head to https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/fanmade/ for the site.</font></table>
+<font color=black><i>A:</i> Well, um, there are Fan Games for your delectation in the Sonic Fan Club, right here in the Sonic Stadium. But if it's more you're after, head to my buddy Rlan's site, Sonic Fan Games HQ. There are absolutely tons of Fan Games for your needs. Head to http://ssrg.emulationzone.org/fanmade/ for the site.</font></table>
 <p>
 
 <table border=1 width=100%><tr><td><div align=center>
@@ -117,14 +117,14 @@ questions:<p>
 3. I have the tails plushie, can ya send me the sonic? (Erm) <br>
 <font color=orange>From StrataHyren<br>
 <font color=black><i>A:</i> 1) Possibly, but if there is a way, Diablo hasn't mentioned it to me yet. Maybe he's implementing it in now. It would be a good idea though wouldn't it? <br>
-2)Well as a matter of fact he does! My pal Diablo does have a site all about Sonic SV2, just head on over to this URL: https://web.archive.org/20011101000000/http://www.diablohead.50megs.com/ for his site, Diablo's Garage. <br>
+2)Well as a matter of fact he does! My pal Diablo does have a site all about Sonic SV2, just head on over to this URL: http://www.diablohead.50megs.com/ for his site, Diablo's Garage. <br>
 3) As a matter of fact, I do have a Sonic plushie, but you can't have it, this baby's mine! ^_^ </font></table>
 <p>
 
 <table border=1 width=100%><tr><td><div align=center>
 <font size=2 color=green><b><i>Q:</i> Are you going to ever post the mp3s from your radio station.many people enjoy listening to it but no one gets to listen offline?<br>
 <font color=orange>From Shadow the Hedgehog<br>
-<font color=black><i>A:</i> Well now, 'Shadow', ^_^ I would gladly post up the MP3s featured in the Sega Sonic Radio Station, in fact, Dreadknux was about to do that same thing ages ago, near when the Stadium had that 'New Look' crap about it. But the matter of the situation was web space. Dread simply had no web space to begin with, and therefore putting MP3s up on the site for download would limit the space for the rest of the site. But, with Dreadknux thinking of opening a new web space account, and those good people at <a href="https://web.archive.org/20011101000000/http://www.topcities.com/" target=_blank><font color=blue>Topcities</a></font> allowing 150 whole Megs of space, today MP3 downloads on the Stadium seem like a viable option now. Although, whether to put up MP3's or RAMs online is yet undecided. Would you rather RAM's or MP3's? E-mail your opinion to Dreadknux!</font></table>
+<font color=black><i>A:</i> Well now, 'Shadow', ^_^ I would gladly post up the MP3s featured in the Sega Sonic Radio Station, in fact, Dreadknux was about to do that same thing ages ago, near when the Stadium had that 'New Look' crap about it. But the matter of the situation was web space. Dread simply had no web space to begin with, and therefore putting MP3s up on the site for download would limit the space for the rest of the site. But, with Dreadknux thinking of opening a new web space account, and those good people at <a href="http://www.topcities.com/" target=_blank><font color=blue>Topcities</a></font> allowing 150 whole Megs of space, today MP3 downloads on the Stadium seem like a viable option now. Although, whether to put up MP3's or RAMs online is yet undecided. Would you rather RAM's or MP3's? E-mail your opinion to Dreadknux!</font></table>
 <p>
 <hr width=90%><p>
 <font size=4 color=red>Last Month's questions...</font><p>
