--- a/sonicstadium/topcities/index.html
+++ b/sonicstadium/topcities/index.html
@@ -26,25 +26,25 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 <script LANGUAGE="JavaScript">
 <!-- Hide from old browsers
 if (self.parent.frames.length != 0)
-        self.parent.location="/sonicstadium/topcities/index.html";
+        self.parent.location="http://dreadknux.topcities.com/sonicstadium/index.html";
 // -->
 </script>
 
 <BODY bgcolor=navy bgproperties="fixed" TEXT="BLACK" link=white alink=white vlink=white LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0"><!--
 	TOPCITIES MEMBER, IF THIS BANNER IS MESSING UP YOUR PAGE LAYOUT, VISIT 
-	https://web.archive.org/20011101000000/http://www.topcities.com/help/banner.html
+	http://www.topcities.com/help/banner.html
 	FOR INSTRUCTIONS ON HOW TO FIX IT
 -->
 
 <CENTER>
-<IFRAME WIDTH=468 HEIGHT=60 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="https://web.archive.org/20011101000000/http://64.152.192.118/stuff_tc/index.htm"></iframe>
+<IFRAME WIDTH=468 HEIGHT=60 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="http://64.152.192.118/stuff_tc/index.htm"></iframe>
 <TABLE BORDER=0 CELLPADDING=0 CELLSPACING=0>
 	<TR>
 		
-      <TD> <A HREF="https://web.archive.org/20011101000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.thefreesite.com" TARGET="_top"> <IMG SRC="https://web.archive.org/20011101000000/http://64.152.192.118/stuff_tc/mb_thefreesite156x20.gif" WIDTH=156 HEIGHT=20 BORDER=0></A></TD>
+      <TD> <A HREF="http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.thefreesite.com" TARGET="_top"> <IMG SRC="http://64.152.192.118/stuff_tc/mb_thefreesite156x20.gif" WIDTH=156 HEIGHT=20 BORDER=0></A></TD>
 		
-      <TD> <A HREF="https://web.archive.org/20011101000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.topcities.com/cgi-bin/home/signup" TARGET="_top"> 
-        <IMG SRC="https://web.archive.org/20011101000000/http://64.152.192.118/stuff_tc/mb_topcities312x20.gif" WIDTH=312 HEIGHT=20 BORDER=0 ALT="Get Your Free 150 MB Website Now!"></A></TD>
+      <TD> <A HREF="http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.topcities.com/cgi-bin/home/signup" TARGET="_top"> 
+        <IMG SRC="http://64.152.192.118/stuff_tc/mb_topcities312x20.gif" WIDTH=312 HEIGHT=20 BORDER=0 ALT="Get Your Free 150 MB Website Now!"></A></TD>
 	</TR>
 </TABLE>
 
@@ -63,20 +63,20 @@ if (self.parent.frames.length != 0)
 <table border=0 width=100% bgcolor=black>
 <tr><td width=23% bgcolor=#00509F><div align=center>
 <font size=2 color=#ffc000><u><b><i>*Affiliates*</u></i></font>
-<a href="https://web.archive.org/20011101000000/http://www.sonicroms.co.uk" border=1 target=_blank><img src="Update/sonicromslogo.gif" alt="Sonic Roms.co.uk"></a><br>
-<a href="https://web.archive.org/20011101000000/http://www.sonicfoundation.org" target=_blank><img src="Update/tsfbutton.gif" alt="The Sonic Foundation"></a><br>
-<a href="https://web.archive.org/20011101000000/http://www.sharkattackchaos.com" target=_blank><img src="Update/sharkattacklogo.gif" alt="Shark Attack Chaos"></a><br>
-<a href="https://web.archive.org/20011101000000/http://www.angelfire.com/games3/sonichedgehogs" target=_blank><img src="Update/sonnewsbutton.gif" alt="Sonic News"></a><br>
-<a href="https://web.archive.org/20011101000000/http://www.fpforums.net/~hhog" target=_blank><img src="Update/hhoglogo.gif" alt="H Hog's Zone"></a><br>
-<a href="https://web.archive.org/20011101000000/http://www.mooglecavern.com" target=_blank><img src="Update/mooglecavernlogo.gif" alt="The Moogle Cavern"></a><p>
+<a href="http://www.sonicroms.co.uk" border=1 target=_blank><img src="Update/sonicromslogo.gif" alt="Sonic Roms.co.uk"></a><br>
+<a href="http://www.sonicfoundation.org" target=_blank><img src="Update/tsfbutton.gif" alt="The Sonic Foundation"></a><br>
+<a href="http://www.sharkattackchaos.com" target=_blank><img src="Update/sharkattacklogo.gif" alt="Shark Attack Chaos"></a><br>
+<a href="http://www.angelfire.com/games3/sonichedgehogs" target=_blank><img src="Update/sonnewsbutton.gif" alt="Sonic News"></a><br>
+<a href="http://www.fpforums.net/~hhog" target=_blank><img src="Update/hhoglogo.gif" alt="H Hog's Zone"></a><br>
+<a href="http://www.mooglecavern.com" target=_blank><img src="Update/mooglecavernlogo.gif" alt="The Moogle Cavern"></a><p>
 
 <!--WEBBOT bot="HTMLMarkup" startspan ALT="Site Meter" -->
 <script type="text/javascript" language="JavaScript">var site="sm5coolechidna"</script>
-<script type="text/javascript" language="JavaScript1.2" src="https://web.archive.org/20011101000000/http://sm5.sitemeter.com/js/counter.js?site=sm5coolechidna">
+<script type="text/javascript" language="JavaScript1.2" src="http://sm5.sitemeter.com/js/counter.js?site=sm5coolechidna">
 </script>
 <noscript>
-<a href="https://web.archive.org/20011101000000/http://sm5.sitemeter.com/stats.asp?site=sm5coolechidna" target="_top">
-<img src="https://web.archive.org/20011101000000/http://sm5.sitemeter.com/meter.asp?site=sm5coolechidna" alt="Site Meter" border=0></a>
+<a href="http://sm5.sitemeter.com/stats.asp?site=sm5coolechidna" target="_top">
+<img src="http://sm5.sitemeter.com/meter.asp?site=sm5coolechidna" alt="Site Meter" border=0></a>
 </noscript>
 <!-- Copyright (c)2000 Site Meter -->
 <!--WEBBOT bot="HTMLMarkup" Endspan -->
@@ -92,14 +92,14 @@ if (self.parent.frames.length != 0)
 <td width=23% bgcolor=#00509F><div align=center>
 <!-- Begin Poll Code --> 
 
-</form><form method="get" action="https://web.archive.org/20011101000000/http://polls.vantagenet.com/5/6/2101142556/polls/2101143355/results.htm" >
+</form><form method="get" action="http://polls.vantagenet.com/5/6/2101142556/polls/2101143355/results.htm" >
 <table width="150" cellpadding= "4" cellspacing="0" border="1">
 <tr><td  bgcolor="#5588cc" ><center><font size="2" color="white" face="Verdana" ><b>Super Dooper Wooper... erm... Sonic.</b></font>
 </center></td></tr><tr><td  bgcolor="#ddeeff" ><input type="hidden" name="ptype" value="2"><input type="hidden" name="rlt" value="2101143355"><input type="hidden" name="id" value="2101143355">
 <font color="#000000" size= "1" face="Verdana" ><b>Righty then. Which of the following is the coolest SUPER Character?</b></font><br><br>
 <table border="0">
 <tr><td valign="top"><select name=poll><option value=1>Super Sonic<option value=2>Super Knuckles<option value=3>Super Shadow<option value=4>Super Tails<option value=5>Super Mecha Sonic</select></td></tr>
-</table><br><center><input type="submit" value="Vote!" name="1"><br><font size="1" color="#000000" face="Verdana" ><a href="https://web.archive.org/20011101000000/http://polls.vantagenet.com/5/6/2101142556/polls/2101143355/results.htm?rlt=2101143355&id=2101143355" >Results</a><br><br><a href="https://web.archive.org/20011101000000/http://ads.freepolls.com/welcome.asp?prod=1&amp;ref=1001"><img src="https://web.archive.org/20011101000000/http://images.vantagenet.com/vantagenet/i/u/pwrbot.gif"border=0 height=20 width=120 align=center></a></font></center>
+</table><br><center><input type="submit" value="Vote!" name="1"><br><font size="1" color="#000000" face="Verdana" ><a href="http://polls.vantagenet.com/5/6/2101142556/polls/2101143355/results.htm?rlt=2101143355&id=2101143355" >Results</a><br><br><a href="http://ads.freepolls.com/welcome.asp?prod=1&amp;ref=1001"><img src="http://images.vantagenet.com/vantagenet/i/u/pwrbot.gif"border=0 height=20 width=120 align=center></a></font></center>
 </td></tr></table></form>
 
  <!-- End Poll Code -->
@@ -123,10 +123,10 @@ if (self.parent.frames.length != 0)
 <table border=0 width=60%><tr><td valign=bottom>
 <div align=center>
 <font size=2 color=#00B700><b>Please Sign My Guestbook!</font><br>
-<!-- \/ GuestGEAR Code by https://web.archive.org/20011101000000/http://htmlgear.com \/ -->
-<a href="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/specs/guest.html"><img border=0 ismap src="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/img/guest/gb_circuit.gif"></a><br>
-<a href="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=sign" target=_blank><font face="arial,helv,helvetica,sans serif" size=-1>Sign Guestbook</font></a><br>
-<a href="https://web.archive.org/20011101000000/http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=view" target=_blank><font face="arial,helv,helvetica,sans serif" size=-1>View Guestbook</font></a><br>
+<!-- \/ GuestGEAR Code by http://htmlgear.com \/ -->
+<a href="http://htmlgear.lycos.com/specs/guest.html"><img border=0 ismap src="http://htmlgear.lycos.com/img/guest/gb_circuit.gif"></a><br>
+<a href="http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=sign" target=_blank><font face="arial,helv,helvetica,sans serif" size=-1>Sign Guestbook</font></a><br>
+<a href="http://htmlgear.lycos.com/guest/control.guest?u=dreadknux&i=1&a=view" target=_blank><font face="arial,helv,helvetica,sans serif" size=-1>View Guestbook</font></a><br>
 
 <!-- /\ End GuestGEAR Code /\ -->
 </table>
@@ -168,7 +168,7 @@ if (self.parent.frames.length != 0)
 
 
 <table border=0 width=100% bgcolor=black><tr><td width=50%>
-<font size=2 face=times new roman color=white><b>The Sonic Stadium is part of the <a href="https://web.archive.org/20011101000000/http://dreadknux.topcities.com/index.html" target=_blank><font color=blue>Dreadknux Network</a></font>. Pretty Cool eh? <td width=50%><font size=2 face=times new roman color=white><b><div align=right>   <a href="https://web.archive.org/20011101000000/http://dreadknux.topcities.com/index.html" target=_blank><font color=blue>Dreadknuxnet Base site</a></font>&nbsp;|&nbsp;<a href="https://web.archive.org/20011101000000/http://listen.to/segasonic" target=_blank><font color=blue>Sega Sonic Radio</a></font>&nbsp;|&nbsp; <font color=blue>Sonic Fan Club</a></table>
+<font size=2 face=times new roman color=white><b>The Sonic Stadium is part of the <a href="http://dreadknux.topcities.com/index.html" target=_blank><font color=blue>Dreadknux Network</a></font>. Pretty Cool eh? <td width=50%><font size=2 face=times new roman color=white><b><div align=right>   <a href="http://dreadknux.topcities.com/index.html" target=_blank><font color=blue>Dreadknuxnet Base site</a></font>&nbsp;|&nbsp;<a href="http://listen.to/segasonic" target=_blank><font color=blue>Sega Sonic Radio</a></font>&nbsp;|&nbsp; <font color=blue>Sonic Fan Club</a></table>
 
 
 </body></html>
