--- a/sonichq/design/ezextras/posticons/index.html
+++ b/sonichq/design/ezextras/posticons/index.html
@@ -7,28 +7,28 @@
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
-<script src=/scripts/sonic-init.js></script>
+<script src=/sonichq/scripts/sonic-init.js></script>
 <script language=JavaScript>
 <!--
-document.write('<link rel=stylesheet href=http://www.sonichq.org/css/' + theme + '.css type="text/css">')
+document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="text/css">')
 //-->
 </script>
 <noscript>
-<link rel=stylesheet href=http://www.sonichq.org/css/main.css type="text/css">
+<link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </noscript>
 </head>
 
-<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 
 <br>
 
 <center>
-<IFRAME SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
+<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
 MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
+<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
 </SCRIPT>
 <NOSCRIPT>
-<A HREF="http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
+<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
 </NOSCRIPT>
 </IFRAME>
 <!-- ---------- Advertising.com Banner Code -------------- --> 
@@ -47,7 +47,7 @@ if (document.cookie.indexOf('AdComPop60917')==-1)
 setCookie('AdComPop60917','yes',1);
 var bnum=new Number(Math.floor(99999999 * Math.random())+1);
 document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
-document.write(' SRC="http://servedby.advertising.com/pops=1/site=60917/bnum='+bnum+'">'); 
+document.write(' SRC="https://web.archive.org/20011101000000/http://servedby.advertising.com/pops=1/site=60917/bnum='+bnum+'">'); 
 document.write('</SCR'); 
 document.write('IPT>'); 
 } 
@@ -62,7 +62,7 @@ document.write('IPT>');
 
 <!main table top>
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%" class=maintable>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100% height=50>
 <script language=JavaScript>
@@ -72,12 +72,12 @@ document.write(titlepic + titlelogo)
 </script>
 &nbsp;</td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><td valign=middle width=100% bgcolor=black><font size=2>
-<script src=/scripts/menu.js></script>
+<script src=/sonichq/scripts/menu.js></script>
 <noscript>&nbsp;</noscript>
 </font></td></table>
 
@@ -116,16 +116,16 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 //-->
 </script>
 
-<center><u>Posting Tools</u></center><p>Welcome to the Posting Tools home page!  This 3rd-party script is designed to add additional posticons and other features to EZBoards.  It's written in javascript and requires no use of site permissions, just a file on your server and some code in your board header.  I may make a remotely-hosted version, which would require only a code in your banner and include automatic updates, if enough people ask for this feature.  Be sure to check back for updates and new features.  To comment on this script, post <a href=http://pub12.ezboard.com/fsonichqcommunityfrm20>here</a>.  Please do not contact EZBoard about tech support for this script - ask any quesdtions on the appropriate HQ forum
+<center><u>Posting Tools</u></center><p>Welcome to the Posting Tools home page!  This 3rd-party script is designed to add additional posticons and other features to EZBoards.  It's written in javascript and requires no use of site permissions, just a file on your server and some code in your board header.  I may make a remotely-hosted version, which would require only a code in your banner and include automatic updates, if enough people ask for this feature.  Be sure to check back for updates and new features.  To comment on this script, post <a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm20>here</a>.  Please do not contact EZBoard about tech support for this script - ask any quesdtions on the appropriate HQ forum
 </font></td></tr>
 </table>
 <!end main table middle>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
