--- a/sonichq/design/index.html
+++ b/sonichq/design/index.html
@@ -3,23 +3,23 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>Design HQ</title>
-<script src=/scripts/sonic-init.js></script>
+<script src=/sonichq/scripts/sonic-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
 <script language=JavaScript>
 <!--
-document.write('<link rel=stylesheet href=http://www.sonichq.org/css/' + theme + '.css type="text/css">')
+document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="text/css">')
 //-->
 </script>
 <noscript>
-<link rel=stylesheet href=http://www.sonichq.org/css/main.css type="text/css">
+<link rel=stylesheet href=/sonichq/css/main.css type="text/css">
 </noscript>
 
 </head>
 
-<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" link=3366ff vlink=3366ff background="/sonichq/images/backgrounds/TailsGrayBG.gif" bgproperties="fixed">
 &nbsp;
 
 <br>
@@ -31,7 +31,7 @@ document.write('<link rel=stylesheet href=http://www.sonichq.org/css/' + theme +
 
 <!main table top>
 <p><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%" class=maintable>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100% height=50>
 <script language=JavaScript>
@@ -41,12 +41,12 @@ document.write(titlepic + titlelogo)
 </script>
 &nbsp;</td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><td valign=middle width=100% bgcolor=black><font size=2>
-<script src=/scripts/menu.js></script>
+<script src=/sonichq/scripts/menu.js></script>
 <noscript>&nbsp;</noscript>
 </font></td></table>
 
@@ -112,16 +112,16 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 
 <center><u>Welcome To Design HQ!</u></center><p>This page is obviously under construction, but I want to open it today.  It's got some EZBoard admin tricks and software links right now, and I'm adding tons more over the next week.
 
-<center><IMG SRC="/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="/scripts/counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/scripts/counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5"><br><font face="arial" size=-2 color=green>hits since March 30, 2001.</font></center>
+<center><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/1.gif" WIDTH=15 HEIGHT=20 ALT="1"><IMG SRC="/sonichq/scripts/counter/2.gif" WIDTH=15 HEIGHT=20 ALT="2"><IMG SRC="/sonichq/scripts/counter/0.gif" WIDTH=15 HEIGHT=20 ALT="0"><IMG SRC="/sonichq/scripts/counter/5.gif" WIDTH=15 HEIGHT=20 ALT="5"><br><font face="arial" size=-2 color=green>hits since March 30, 2001.</font></center>
 </font></td></tr>
 </table>
 <!end main table middle>
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
 
