It just keeps coming.

--- a/sonichq/features/survey/survey.htm
+++ b/sonichq/features/survey/survey.htm
@@ -11,20 +11,20 @@
 </style>
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="http://www.sonichq.org/images/backgrounds/KnuxGrayBG.gif">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/KnuxGrayBG.gif">
 &nbsp;
 <center>
 
 
 <!main table top>
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
-<tr><td width=19><img src=http://www.sonichq.org/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100%>
 <script language="JavaScript" src=../../scripts/titlebar-rand.js></script>
-<img src=http://www.sonichq.org/features/topbar-title.gif align=right></td>
+<img src=/sonichq/features/topbar-title.gif align=right></td>
 
-<td width=19><img src=http://www.sonichq.org/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
@@ -91,9 +91,9 @@ Check back here on the next update for the survey results.
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0>
 <tr>
-<td><img SRC="http://www.sonichq.org/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
 <td width=100% bgcolor=000000><font color="white" size=-3 face="arial"><center>All features are part of Sonic HQ, do not take without HQ permission.</center></font></td>
-<td><img SRC="http://www.sonichq.org/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
