--- a/sonichq/tripod/sonichq/Interviews.html
+++ b/sonichq/tripod/sonichq/Interviews.html
@@ -14,9 +14,9 @@
 
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
 <br><b>In here, you'll find all the interviews we ever put up on the main page. Most of them are exclusive to Sonic HQ News, that means you won't find them anywhere else. So be happy. A little history, the first interview we did was with the great Ken Penders. What a start, huh?</b>
 
@@ -31,13 +31,13 @@
 <b>The Interviews Archive</b></td></tr>
 
 <tr><td colspan="2">
-<p><a href="http://members.tripod.com/~sonichq/interviews/Interview_MettleSonic.html">Mettle Sonic</a> - HQ Exclusive, 10-10-98.
+<p><a href="/sonichq/tripod/sonichq/interviews/Interview_MettleSonic.html">Mettle Sonic</a> - HQ Exclusive, 10-10-98.
 
-<p><a href="http://members.tripod.com/~sonichq/interviews/Interview_Naka1.html">Yuji Naka</a> - Interview by SSM, 9-18-98.
+<p><a href="/sonichq/tripod/sonichq/interviews/Interview_Naka1.html">Yuji Naka</a> - Interview by SSM, 9-18-98.
 
-<p><a href="http://www.geocities.com/EnchantedForest/Dell/7835/News_Ben_interview.txt">Ben Acorn</a> - HQ exclusive, 7-20-98.
+<p><a href="/sonichqgeocities/EnchantedForest/Dell/7835/News_Ben_interview.txt">Ben Acorn</a> - HQ exclusive, 7-20-98.
 
-<p><a href="http://www.geocities.com/EnchantedForest/Dell/7835/News2.txt">Ken Penders</a> - HQ exclusive, 6-23-98.
+<p><a href="/sonichq/geocities/EnchantedForest/Dell/7835/News2.txt">Ken Penders</a> - HQ exclusive, 6-23-98.
 
 </td></tr></table>
 
