--- a/sonichq/tripod/sonichq/crew.html
+++ b/sonichq/tripod/sonichq/crew.html
@@ -14,9 +14,9 @@
 
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
 <br><b>We have been bring you the best stuff since oh...the Febuary of 1998. We were the first major Sonic news page to take shape after the Freedom Fighter Network went down (that was too bad, that page was a great page!). But who's bringing you this news? Want to meet the news crew members? Scroll down. And right now we need someone who could do interviews and stuff like that (which means you have to chat a lot and know a lot of people). If you're interested, email <a href="zifei@yahoo.com">Zifei</a>.</b>
 
