--- a/sonichq/tripod/sonichq/index.html
+++ b/sonichq/tripod/sonichq/index.html
@@ -30,11 +30,11 @@
 
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
 
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
 
 
@@ -62,7 +62,7 @@
 
 
 
-<CENTER><a href="http://members.tripod.com/~sonichq/interviews/Interview_Ruby.html"><img src="http://members.tripod.com/~sonichq/tempimages/Temp_Ruby.gif"></a><br>
+<CENTER><a href="/sonichq/tripod/sonichq/interviews/Interview_Ruby.html"><img src="/sonichq/tripod/sonichq/tempimages/Temp_Ruby.gif"></a><br>
 
 
 
@@ -70,7 +70,7 @@ Click here for the Sonic HQ exclusive interview with Ruby Echidna, Sonic artist 
 
 
 
-<p><CENTER><a href="archive.html"><img src="http://members.tripod.com/~sonichq/images/Archive.gif"></a><br>
+<p><CENTER><a href="archive.html"><img src="/sonichq/tripod/sonichq/images/Archive.gif"></a><br>
 
 
 
@@ -78,14 +78,14 @@ Located here are the archived news articles, they'll be there for a year.</cente
 
 
 
-<p><CENTER><a href="crew.html"><img src="http://members.tripod.com/~sonichq/images/Meetstaff.gif"></a><br>Come here and meet the people that's bring you the Sonic News Press!</CENTER>
+<p><CENTER><a href="crew.html"><img src="/sonichq/tripod/sonichq/images/Meetstaff.gif"></a><br>Come here and meet the people that's bring you the Sonic News Press!</CENTER>
 
 
-<p><CENTER><a href="Interviews.html"><img src="http://members.tripod.com/~sonichq/images/Interviews.gif"></a><br>
+<p><CENTER><a href="Interviews.html"><img src="/sonichq/tripod/sonichq/images/Interviews.gif"></a><br>
 Here you can find the archive interviews Sonic HQ and others did. Check 'em out!</center>
 
 
-<p><CENTER><a href="links.html"><img src="http://members.tripod.com/~sonichq/images/Links.gif"></a><br>Here you would find some pretty good Sonic news links.</CENTER>
+<p><CENTER><a href="links.html"><img src="/sonichq/tripod/sonichq/images/Links.gif"></a><br>Here you would find some pretty good Sonic news links.</CENTER>
 
 
 
@@ -102,7 +102,7 @@ Here you can find the archive interviews Sonic HQ and others did. Check 'em out!
 <tr><td bgcolor="#5F9F9F" align="left" colspan="2"><font size="+1" color="#ADEAEA">
 <b>New News Page!</b> - Zifei 2:48pm CST, 12-21-98</td></tr>
 <tr><td colspan="2">
-From now on until January 1, when Sonic HQ officially move, you'll find all news updates on this new <a href="http://www.emulationzone.org/sonichq/news/news.htm">news page</a>.
+From now on until January 1, when Sonic HQ officially move, you'll find all news updates on this new <a href="/sonichq//emuzone/news/news.htm">news page</a>.
 </td></tr></table>
 
 <P> 
@@ -149,7 +149,7 @@ All news related to Sonic the Hedgehog are copyright to Sega Enterprise, Archie,
 
 
 
-       <IMG SRC="http://count.freeyellow.com/cgi-shl/count.exe?df=sonichq.dat">
+       <IMG SRC="https://web.archive.org/20011101000000/http://count.freeyellow.com/cgi-shl/count.exe?df=sonichq.dat">
 
 
 
