--- a/sonichq/tripod/sonichq/interviews/Interview_MettleSonic.html
+++ b/sonichq/tripod/sonichq/interviews/Interview_MettleSonic.html
@@ -14,11 +14,11 @@
 <BODY TEXT="#0000FF" BGCOLOR="#000000" LINK="#CD7F32" VLINK="#FF0000" ALINK="#003366">
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
-<br><b>This interview is done by Vector, the new member of the Sonic HQ News Crew. He'll be doing the interviews from now on. We thank Vector for this GREAT interview with Mettle Sonic, the developer of the Sonic RPG. We suggest that everyone tryout this game. It's shaping up to be a good if not great fun game. Mettle does need some help in making the game, so if you're interested, email <a href="mailto:mailto:mettle_sonic@hotmail.com">him</a>. Also, please visit the Sonic RPG <a href="http://members.tripod.com/~mettle_sonic/sonicrpg.html">page</a>. And here's the Sonic HQ EXCLUSIVE interview:</b>
+<br><b>This interview is done by Vector, the new member of the Sonic HQ News Crew. He'll be doing the interviews from now on. We thank Vector for this GREAT interview with Mettle Sonic, the developer of the Sonic RPG. We suggest that everyone tryout this game. It's shaping up to be a good if not great fun game. Mettle does need some help in making the game, so if you're interested, email <a href="mailto:mailto:mettle_sonic@hotmail.com">him</a>. Also, please visit the Sonic RPG <a href="https://web.archive.org/20011101000000/http://members.tripod.com/~mettle_sonic/sonicrpg.html">page</a>. And here's the Sonic HQ EXCLUSIVE interview:</b>
 
 <font size="-1">
 
