--- a/sonichq/tripod/sonichq/interviews/Interview_Naka1.html
+++ b/sonichq/tripod/sonichq/interviews/Interview_Naka1.html
@@ -14,9 +14,9 @@
 <BODY TEXT="#0000FF" BGCOLOR="#000000" LINK="#CD7F32" VLINK="#FF0000" ALINK="#003366">
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
 <br><b>Prior to the Sonic Adventure press conference on August 22nd, Yuji Naka, the head man of the Sonic Team travelled to London, UK to show off Sonic Adventure to an elite group of British games journalists. In the group included a bunch from Sega Saturn Mag. Those people did an interview with Naka, and here it is:</b>
 
