--- a/sonichq/tripod/sonichq/interviews/Interview_Ruby.html
+++ b/sonichq/tripod/sonichq/interviews/Interview_Ruby.html
@@ -14,11 +14,11 @@
 <BODY TEXT="#0000FF" BGCOLOR="#000000" LINK="#CD7F32" VLINK="#FF0000" ALINK="#003366">
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
-<br><b>This interview is done by Vector, our regular interview guy. You can contact Vector via Mobius Forum of Sonic HQ. Vector this time brings us a very good interview with long time Sonic fan and all around great artist Dawn Marie Best, AKA <a href="mailto:luna@csrlink.net">Ruby Echidna</a>. Ruby's one of the first Sonic artists on the net. Recently, she started off a fan comic called Sonic Ideal. Click <a href="http://sirkain.erols.com/~ruby/segasonic/">here</a> to visit Sonic Ideal's homepage. Now there's some bad news, she's leaving the Sonic Fandom! Why? Read on and find out.</b>
+<br><b>This interview is done by Vector, our regular interview guy. You can contact Vector via Mobius Forum of Sonic HQ. Vector this time brings us a very good interview with long time Sonic fan and all around great artist Dawn Marie Best, AKA <a href="mailto:luna@csrlink.net">Ruby Echidna</a>. Ruby's one of the first Sonic artists on the net. Recently, she started off a fan comic called Sonic Ideal. Click <a href="https://web.archive.org/20011101000000/http://sirkain.erols.com/~ruby/segasonic/">here</a> to visit Sonic Ideal's homepage. Now there's some bad news, she's leaving the Sonic Fandom! Why? Read on and find out.</b>
 
 <font size="-1">
 
