--- a/sonichq/tripod/sonichq/links.html
+++ b/sonichq/tripod/sonichq/links.html
@@ -14,9 +14,9 @@
 <BODY TEXT="#0000FF" BGCOLOR="#000000" LINK="#CD7F32" VLINK="#FF0000" ALINK="#003366">
 
 
-<CENTER><img src="http://members.tripod.com/~sonichq/images/Soniclogo.gif" align=left><br><img src="http://members.tripod.com/~sonichq/images/SNP.gif"><br></CENTER>
+<CENTER><img src="/sonichq/tripod/sonichq/images/Soniclogo.gif" align=left><br><img src="/sonichq/tripod/sonichq/images/SNP.gif"><br></CENTER>
 
-<img src="http://members.tripod.com/~sonichq/images/bluebar.gif">
+<img src="/sonichq/tripod/sonichq/images/bluebar.gif">
 
 <br><b>Although we're the best (notice that I didn't say the fastest, but soon we will be!) source on the whole Internet for all kinds of Sonic related news (yeah, ONLY Sonic related news), there are quiet a few others out there. Here's some that I think are pretty good Sonic news pages. BTW, if you have a page that belongs down here, please email <a href="mailto:zw@rocketmail.com">me</a> the link, and I'll put it up.</b>
 
@@ -31,23 +31,23 @@
 <b>Other Sonic News Pages!</b></td></tr>
 
 <tr><td colspan="2">
-<p><a href="http://knuxcom.simplenet.com/sonic/news/index.html">Knuxcom News</a> - Not very up to date, but a good archive that extend back to September of 1996.
+<p><a href="https://web.archive.org/20011101000000/http://knuxcom.simplenet.com/sonic/news/index.html">Knuxcom News</a> - Not very up to date, but a good archive that extend back to September of 1996.
 
-<p><a href="http://www.franken.de/users/deco/news/news.html">Sonic the Hedgehog News</a> - In depth coverage of all the important Sonic news, not updated very often, but a must visit if you're clueless about a few Sonic events.
+<p><a href="https://web.archive.org/20011101000000/http://www.franken.de/users/deco/news/news.html">Sonic the Hedgehog News</a> - In depth coverage of all the important Sonic news, not updated very often, but a must visit if you're clueless about a few Sonic events.
 
-<p><a href="http://www.cybermail.net/~sonic/news.htm">Sonic-Related News</a> - Not a bad place. But not very up to date. Check it out if you have time.
+<p><a href="https://web.archive.org/20011101000000/http://www.cybermail.net/~sonic/news.htm">Sonic-Related News</a> - Not a bad place. But not very up to date. Check it out if you have time.
 
-<p><a href="http://members.tripod.com/~MaraRe/news2.html">Mara-Re's Sonicverse News Room</a> - Although a very simple design, it's one of my favorite Sonic news places...it's the only site that sometimes report news faster (I mean a lot faster) than us.
+<p><a href="https://web.archive.org/20011101000000/http://members.tripod.com/~MaraRe/news2.html">Mara-Re's Sonicverse News Room</a> - Although a very simple design, it's one of my favorite Sonic news places...it's the only site that sometimes report news faster (I mean a lot faster) than us.
 
-<p><a href="http://kedziek.simplenet.com/news/board/index.htm">tSf News Board</a> - An excellent place if you want a combination of Sega nd Sonic news on the run.
+<p><a href="https://web.archive.org/20011101000000/http://kedziek.simplenet.com/news/board/index.htm">tSf News Board</a> - An excellent place if you want a combination of Sega nd Sonic news on the run.
 
-<p><a href="http://members.tripod.com/~Nex/news.html">NEXCOM News</a> - Well, just another news page. Not very up to date, but if you have time, take a look.
+<p><a href="https://web.archive.org/20011101000000/http://members.tripod.com/~Nex/news.html">NEXCOM News</a> - Well, just another news page. Not very up to date, but if you have time, take a look.
 
-<p><a href="http://www.geocities.com/Area51/Shadowlands/5373/news.html">Dark Legion News</a> - Pepper J. Zeal's page, not updated often, but enough to tell you what's going on.
+<p><a href="https://web.archive.org/20011101000000/http://www.geocities.com/Area51/Shadowlands/5373/news.html">Dark Legion News</a> - Pepper J. Zeal's page, not updated often, but enough to tell you what's going on.
 
-<p><a href="http://www.kenpenders.com/">Ken Penders' Page</a> - Well, it's the writer's page, there gotta be something new...
+<p><a href="https://web.archive.org/20011101000000/http://www.kenpenders.com/">Ken Penders' Page</a> - Well, it's the writer's page, there gotta be something new...
 
-<p><a href="http://www.geocities.com/TimesSquare/Realm/4631/news.html">Tiara's News Page</a> - If you're looking for Sonic gaming news, go here. Just beware of the background color.
+<p><a href="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/Realm/4631/news.html">Tiara's News Page</a> - If you're looking for Sonic gaming news, go here. Just beware of the background color.
 
 </td></tr></table>
 
