Saving news for last here.

--- a/sonichq/forum/index.html
+++ b/sonichq/forum/index.html
@@ -24,19 +24,19 @@ font-family:Arial; font-size:10pt; color:black;
 
 </head>
 
-<body text="#000000" bgcolor="white" link=blue vlink=blue background="http://sonichq.org/images/backgrounds/TailsGrayBG.gif">
+<body text="#000000" bgcolor="white" link=blue vlink=blue background="/sonichq/images/backgrounds/TailsGrayBG.gif">
 <center><p>
 
 <!main table top>
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
-<tr><td width=19><img src=http://sonichq.org/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100%>
-<img src="http://www.geocities.com/blackbat4/iconlogo/logo18.jpg" align="left">
-<img src="http://www.geocities.com/blackbat4/iconsmini/group2.jpg" align="right">
+<img src="https://web.archive.org/20011101000000/http://www.geocities.com/blackbat4/iconlogo/logo18.jpg" align="left">
+<img src="https://web.archive.org/20011101000000/http://www.geocities.com/blackbat4/iconsmini/group2.jpg" align="right">
 </td>
 
-<td width=19><img src=http://sonichq.org/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 <!end main table top>
 
@@ -51,7 +51,7 @@ font-family:Arial; font-size:10pt; color:black;
 
 <!chat>
 <tr><td class=titlebar>
-<a href=http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=60564&ClientID=52218>Emerald Chatstation</a>
+<a href=https://web.archive.org/20011101000000/http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=60564&ClientID=52218>Emerald Chatstation</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -60,7 +60,7 @@ To relieve SHQ's often flooded mailbox, this community is where you get IN CONTA
 
 <!South Island Forum>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm10>South Island Forum!
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm10>South Island Forum!
 </a>
 </td></tr>
 
@@ -70,7 +70,7 @@ For all you hardcore Segasonic and Dreamcast fans out there! Appreciaters of the
 
 <!chat>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm8>Knothole Village Forum!
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm8>Knothole Village Forum!
 </a>
 </td></tr>
 
@@ -80,7 +80,7 @@ Discuss The Archie Sonic Comics here! :)<br><br>
 
 <!Fan Projects Forum>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunitycarnivalislefanfictionfanprojects href3=http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=66547&ClientID=52218 href2="http://www.emulationzone.org/sonichq/cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Fan+Projects+Forum&number=2&DaysPrune=&LastLogin=">Carnival Island Fan Projects</a>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitycarnivalislefanfictionfanprojects href3=https://web.archive.org/20011101000000/http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=66547&ClientID=52218 href2="/sonichq/emuzone/cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Fan+Projects+Forum&number=2&DaysPrune=&LastLogin=">Carnival Island Fan Projects</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -105,7 +105,7 @@ Welcome to the Fan Projects Forum!  Post your fan art, fics, games, comics, or o
 
 <!chat>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunityfrm9>The Floating Island Forum</a>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm9>The Floating Island Forum</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -114,7 +114,7 @@ For the fanatics and supreme lovers of Knuckles, so they can have somewhere to d
 
 <!Mobius Forum>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunitymobiusforum>Mobius Forum</a>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitymobiusforum>Mobius Forum</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -127,7 +127,7 @@ One of the longest running Sonic general discussion forums on the net! ^_^ Pop i
 
 <!rp>
 <tr><td class=titlebar>
-<a href2=http://pub12.ezboard.com/fsonichqcommunitysonicroleplay href=http://pub12.ezboard.com/fsonichqcommunitysonicroleplay>The Role Players Guild</a>
+<a href2=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitysonicroleplay href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitysonicroleplay>The Role Players Guild</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -138,7 +138,7 @@ Do you like to Role Play? Want a place where you can literally step out and be s
 
 <!Trade Forum>
 <tr><td class=titlebar>
-<a href2=http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=60581&ClientID=52218 href=http://pub12.ezboard.com/fsonichqcommunitythetradingpost>Nack's Trading Post</a>
+<a href2=https://web.archive.org/20011101000000/http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=60581&ClientID=52218 href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitythetradingpost>Nack's Trading Post</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -149,7 +149,7 @@ Looking for some Sonic merchandise? This is like our "Classified Ads" page. You 
 
 <!News Forum>
 <tr><td class=titlebar>
-<a href=http://pub12.ezboard.com/fsonichqcommunitystationsquarenewsandeditorials href3=http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=80091&ClientID=52218 href2="http://www.emulationzone.org/sonichq/cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Sonic+HQ+News+Forum&number=1&DaysPrune=&LastLogin=">Station Square News And Editorials</a>
+<a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunitystationsquarenewsandeditorials href3=https://web.archive.org/20011101000000/http://sonichq.community.everyone.net/commun_v3/scripts/topics.pl?NodeID=80091&ClientID=52218 href2="/sonichq/emuzone/cgi-bin/bb/forumdisplay.cgi?action=topics&forum=Sonic+HQ+News+Forum&number=1&DaysPrune=&LastLogin=">Station Square News And Editorials</a>
 </td></tr>
 
 <tr><td class=itemtext><font face=Arial size=-1>
@@ -181,9 +181,9 @@ This board covers news, rumors, and opinions relating to Sonic, Sega, and gaming
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0>
 <tr>
-<td><img SRC=http://sonichq.org/bottomleft.gif BORDER=0 height=20></td>
+<td><img SRC=/sonichq/bottomleft.gif BORDER=0 height=20></td>
 <td width=100% bgcolor=000000><font color="white" size=-3 face="arial"><center>Sonic and Co. are properties of Sega.</center></font></td>
-<td><img SRC=http://sonichq.org/bottomright.gif BORDER=0 height=20></td>
+<td><img SRC=/sonichq/bottomright.gif BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
