We're closing in.

--- a/sonichq/images/boxes/index.html
+++ b/sonichq/images/boxes/index.html
@@ -10,7 +10,7 @@
 <body bgcolor=ffffff text=000000 link=blue vlink=blue>
 
 <center><table width=70%><tr align=center><td>
-<img src="http://www.angelfire.com/ok/warpsonic/images/logo.gif" alt="Logo" border=0>
+<img src="/sonichq/angelfire/images/logo.gif" alt="Logo" border=0>
 <font face=Verdana>
 <p><font size=+3 color=4B1FFC>Box Covers and Box Art</font>
 
@@ -19,7 +19,7 @@
 </td></tr></table>
 
 <p><table width=100% border=1 cellspacing=0 cellpadding=3 bordercolorlight=blue bordercolordark=23238E><tr><td>
-<p><font size=-1>The color pics were found at Knuxcom, which got most of them from <a href=http://www.sega.com target=whole>Sega Online</a>, with 2 exceptions.  The Sonic Mega CD box came from <A HREF="http://www.sonic.net/~maxi/sonic/">Max's Sonic Zone</A>, and the European Sonic CD (PC) box came from <A HREF="http://www.geocities.com/TimesSquare/8867/">Magnus
+<p><font size=-1>The color pics were found at Knuxcom, which got most of them from <a href=https://web.archive.org/20011101000000/http://www.sega.com target=whole>Sega Online</a>, with 2 exceptions.  The Sonic Mega CD box came from <A HREF="https://web.archive.org/20011101000000/http://www.sonic.net/~maxi/sonic/">Max's Sonic Zone</A>, and the European Sonic CD (PC) box came from <A HREF="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/8867/">Magnus
 Anderson's Sonic The Hedgehog Page</A>.</font>
 
 <p><font size=-1>All of the black and white box covers were converted
@@ -30,7 +30,7 @@ were originally encoded into a format on the Sonic Jam CD, which <A HREF=mailto:
 <!--
 
 <p><img src=../spacing.gif><hr color=blue>
-<img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif><br>
+<img src=/sonichq/angelfire/images/bar1.gif><br>
 <hr color=blue><br>
 
 -->
@@ -48,7 +48,7 @@ were originally encoded into a format on the Sonic Jam CD, which <A HREF=mailto:
 <!-- main table middle -->
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
 
-<tr><td colspan=3 VALIGN=TOP width=100% bgcolor=000000><center><img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif></center></td></tr>
+<tr><td colspan=3 VALIGN=TOP width=100% bgcolor=000000><center><img src=/sonichq/angelfire/images/bar1.gif></center></td></tr>
 
 <tr><td colspan=3 height=10 bgcolor=000000></td></tr>
 
