--- a/sonichq/images/chars/index.html
+++ b/sonichq/images/chars/index.html
@@ -14,7 +14,7 @@
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
 <tr><td width=19><img src=../../topleft.gif width=19></td>
 
-<td bgcolor=black width=100%><center><font size=+3 color=4B1FFC face=Verdana>Character Pics</font></center></td><td width=19><img src=../../topright.gif width=19></td></tr></table><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000><tr><td VALIGN=TOP height=49><center><img src=http://www.sonichq.org/images/bar1.gif></center></td></tr></table><!-- end main table top --><!-- main table middle --><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%><tr><td VALIGN=TOP BGCOLOR=404FE0>&nbsp;</td><td VALIGN=TOP width=100% bgcolor=ffffff><center><font face=Verdana><blockquote><br>
+<td bgcolor=black width=100%><center><font size=+3 color=4B1FFC face=Verdana>Character Pics</font></center></td><td width=19><img src=../../topright.gif width=19></td></tr></table><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000><tr><td VALIGN=TOP height=49><center><img src=/sonichq/images/bar1.gif></center></td></tr></table><!-- end main table top --><!-- main table middle --><table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%><tr><td VALIGN=TOP BGCOLOR=404FE0>&nbsp;</td><td VALIGN=TOP width=100% bgcolor=ffffff><center><font face=Verdana><blockquote><br>
 
 <font size=+2><a href=screensavers/screensavers1.htm>The Sonic Screensaver</a></font>
 
