--- a/sonichq/images/chars/sonicadv/sa-images.htm
+++ b/sonichq/images/chars/sonicadv/sa-images.htm
@@ -75,7 +75,7 @@
         <!-- end main table middle>
 
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
-<tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href="http://www.emulationzone.org/sonichq"><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
+<tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href="/sonichq/emuzone"><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
 <td><img SRC="../../../bottomleft.gif" BORDER=0 height=20></td>
