--- a/sonichq/images/gallery.html
+++ b/sonichq/images/gallery.html
@@ -20,7 +20,7 @@
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
-<tr><td VALIGN=TOP height=49><center><img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif></center></td></tr>
+<tr><td VALIGN=TOP height=49><center><img src=/sonichq/angelfire/images/bar1.gif></center></td></tr>
 </table>
 <!-- end main table top -->
 
@@ -66,7 +66,7 @@
 <p align=left>Here you can download the Japanese SA commercials, in-game videos of Sonic Adventure and other games, and the SatAM videos.
 <p><hr color=blue width=75%><br>
 
-<embed src="http://www.emulationzone.org/sonichq/music/midis/mm/5/stone.mid" autostart=true loop=true height=30 width=50 controls=smallconsole><br>Stone Man's Stage
+<embed src="/sonichq/emuzone/music/midis/mm/5/stone.mid" autostart=true loop=true height=30 width=50 controls=smallconsole><br>Stone Man's Stage
 
 <br></blockquote></font></center></td>
 
