--- a/sonichq/images/chars/screensavers/screensavers2.htm
+++ b/sonichq/images/chars/screensavers/screensavers2.htm
@@ -16,12 +16,12 @@
 &nbsp;
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH="100%">
-<tr><td width=19><img src="http://www.emulationzone.org/sonichq/topleft.gif" width=19></td>
+<tr><td width=19><img src="/sonichq/emuzone/topleft.gif" width=19></td>
 
 <td bgcolor=black width=100%><font color=FFFFFF font face=arial font size=4>
  <b>Sonic HQ Downloads</b> | Screen Savers Page 2</td>
 
-<td width=19><img src="http://www.emulationzone.org/sonichq/topright.gif" width=19></td></tr>
+<td width=19><img src="/sonichq/emuzone/topright.gif" width=19></td></tr>
 </table>
 
 <center><table border=1 bordercolor="000000" width="100%" cellspacing=0 bgcolor="ffffff">
@@ -221,17 +221,17 @@
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=left valign=bottom><img SRC="http://www.emulationzone.org/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<tr><td align=left valign=bottom><img SRC="/sonichq/emuzone/bottomleft.gif" BORDER=0 height=20></td>
 </table></td>
 
 <td valign=middle bgcolor=000000 width=100%><font color=white>
-<center>[ <a href="http://www.emulationzone.org/sonichq/main.htm" target=new>Back to Main</a> | <a href="screensavers1.htm">Page 1</a> |  Page 2 ]
+<center>[ <a href="/sonichq/emuzone/main.htm" target=new>Back to Main</a> | <a href="screensavers1.htm">Page 1</a> |  Page 2 ]
 </font></font></font></center>
 </td>
 
 <td valign=top><table border=0 cellspacing=0 cellpadding=0 height=100%>
 <tr><td bgcolor=000000 height=100%></td>
-<tr><td align=right valign=bottom><img SRC="http://www.emulationzone.org/sonichq/bottomright.gif" BORDER=0 height=20></td>
+<tr><td align=right valign=bottom><img SRC="/sonichq/emuzone/bottomright.gif" BORDER=0 height=20></td>
 </table></td>
 </table>
 <!end main table bottom>
