--- a/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonic2beta%26title%3dSonic 2 Beta/index.html
+++ b/sonichq/images/display.cgi%3fdirectory%3dscreenshots/sonic2beta%26title%3dSonic 2 Beta/index.html
@@ -3,18 +3,18 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <title>Sonic HQ - Download Gallery - Sonic 2 Beta</title>
-<script src=http://www.sonichq.org/scripts/megaman-init.js></script>
+<script src=/sonichq/scripts/megaman-init.js></script>
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
 </style>
-<link rel=stylesheet href=/css/.css type="text/css">
+<link rel=stylesheet href=/sonichq/css/.css type="text/css">
 </head>
 
-<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
+<body text="#000000" bgcolor="white" alink="#0000FF" link=#0000FF vlink=#0000FF background="/sonichq/images/backgrounds/EspioGrayBG.gif" bgproperties="fixed">
 
 <span class=pathlinks><table class=glow>
-<a href=/>Sonic HQ</a> | <a href=/images>Download Gallery</a> | Sonic 2 Beta
+<a href=/>Sonic HQ</a> | <a href=/sonichq/images>Download Gallery</a> | Sonic 2 Beta
 </table></span>
 
 <center><p><table width=70%><tr align=center><td>
@@ -30,7 +30,7 @@ Sonic 2 Beta
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
-<tr><td VALIGN=TOP height=49><center><img src=http://www.sonichq.org/images/bar1.gif></center></td></tr>
+<tr><td VALIGN=TOP height=49><center><img src=/sonichq/images/bar1.gif></center></td></tr>
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
@@ -98,7 +98,7 @@ Sonic 2 Beta
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td>
 <td rowspan=2 width=100% bgcolor=000000 valign=middle>
-<center><br><a href=/main.htm><b>Back to Sonic HQ Main</b></a><br>&nbsp</center></td>
+<center><br><a href=/sonichq/main.htm><b>Back to Sonic HQ Main</b></a><br>&nbsp</center></td>
 <td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
