--- a/sonichq/images/games.html
+++ b/sonichq/images/games.html
@@ -14,7 +14,7 @@
 Here, you can find Sege demos and fan-made Sonic games to download, as well as some games that can be played online in your browser.
 
 <p><hr color=blue>
-<img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif>
+<img src=/sonichq/angelfire/images/bar1.gif>
 <hr color=blue><br>
 
 <center><font size=+2>Klik & Play / The Games Factory</font></center>
@@ -25,38 +25,38 @@ Here, you can find Sege demos and fan-made Sonic games to download, as well as s
 
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://home7.swipnet.se/~w-70823/sonic_brick.zip">Sonic Brick</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SonicBrick.html">******</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://home7.swipnet.se/~w-70823/sonic_brick.zip">Sonic Brick</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SonicBrick.html">******</a></small></font></td>
     <td align="center"><font face="Verdana"><small>1.1 MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://ssrg.emulationzone.org/stjr/">Sonic Robo Blast</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SRB.html">*****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://ssrg.emulationzone.org/stjr/">Sonic Robo Blast</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SRB.html">*****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>Over 10MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://home7.swipnet.se/~w-70823/search_for_knuckles.zip">The Search For Knuckles</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/SearchForKnuckles.html">****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://home7.swipnet.se/~w-70823/search_for_knuckles.zip">The Search For Knuckles</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/SearchForKnuckles.html">****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>1.29 MB</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://rivendell.fortunecity.com/masquerade/487/tailsr.zip">Tails R</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/TailsR.html">****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://rivendell.fortunecity.com/masquerade/487/tailsr.zip">Tails R</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/TailsR.html">****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>430K</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://www.geocities.com/TimesSquare/8867">Tails Race</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/games/index/fangames/TailsRace.html">****</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://www.geocities.com/TimesSquare/8867">Tails Race</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/games/index/fangames/TailsRace.html">****</a></small></font></td>
     <td align="center"><font face="Verdana"><small>856K</small></font></td>
   </tr>
   <tr align="center">
     <td align="center"><font face="Verdana"><small><a
-    href="http://members.tripod.com/~mettle_sonic/SonicRpg.zip">Sonic RPG</a></small></font></td>
-    <td align="center"><font face="Verdana"><small><a href="http://sonichq.cjb.net/SonicRPG/">Demo</a></small></font></td>
+    href="https://web.archive.org/20011101000000/http://members.tripod.com/~mettle_sonic/SonicRpg.zip">Sonic RPG</a></small></font></td>
+    <td align="center"><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://sonichq.cjb.net/SonicRPG/">Demo</a></small></font></td>
     <td align="center"><font face="Verdana"><small>400K</small></font></font></td>
   </tr>
 </table>
@@ -64,7 +64,7 @@ Here, you can find Sege demos and fan-made Sonic games to download, as well as s
 <p><hr color=blue><br>
 
 <center><font size=+2>Vitalize! Games</font></center>
-<p>In order to play these online games, you need to have <a href=http://www.vitalize.co.uk/downloads.html>Corel Vitalize!</a> installed.  Click on a game's rating to learn more about it.
+<p>In order to play these online games, you need to have <a href=https://web.archive.org/20011101000000/http://www.vitalize.co.uk/downloads.html>Corel Vitalize!</a> installed.  Click on a game's rating to learn more about it.
 <p><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
 <tr align=center><td width=50%>Game Title<td width=25%>Rating/Info<td width=25%>File Size
 </table>
@@ -72,23 +72,23 @@ Here, you can find Sege demos and fan-made Sonic games to download, as well as s
 <p><hr color=blue><br>
 
 <font size=+2>SEGA PC Demos</font>
-<p>These are demos of Sega Entertainment's PC conversions of Sonic games.  They each require <a href="http://microsoft.com/directx/default.asp">DirectX 5</a>.  I strongly recommend all the PC Conversions.
+<p>These are demos of Sega Entertainment's PC conversions of Sonic games.  They each require <a href="https://web.archive.org/20011101000000/http://microsoft.com/directx/default.asp">DirectX 5</a>.  I strongly recommend all the PC Conversions.
 
 <p><table width=100% border=1 cellspacing=0 bordercolorlight=blue bordercolordark=23238E>
 <tr align=center><td width=50%>Game Title<td width=25%>Rating/Info<td width=25%>File Size
 
 <tr align=center>
-<td><font face="Verdana"><small><a href=http://www.sega.com/multimedia/game_demos/exe/sk_demo.exe>Sonic &amp; Knuckles Collection</a></small></font></td>
+<td><font face="Verdana"><small><a href=https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/sk_demo.exe>Sonic &amp; Knuckles Collection</a></small></font></td>
 <td><font face="Verdana"><small><a href=/sonichq/games/index/collection>Info</a></small></font></td>
 <td><font face="Verdana"><small>5 MB</small></font></td></tr>
 
 <tr align=center>
-<td><font face="Verdana"><small><a href="http://www.sega.com/multimedia/game_demos/exe/s3d_demo.exe">Sonic 3D Blast</a></small></font></td>
+<td><font face="Verdana"><small><a href="https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/s3d_demo.exe">Sonic 3D Blast</a></small></font></td>
 <td><font face="Verdana"><small><a href="/sonichq/games/index/3dblast-flickyisle">Info</a></small></font></td>
 <td><font face="Verdana"><small>2.5 MB</small></font></td></tr>
 
 <tr align=center>
-<td><font face="Verdana"><small><a href=http://www.download.com/PC/Result/TitleDetail/0,4,0-20383,1000.html?st.dl.results.list.tdtl>Sonic CD</a></small></font></td>
+<td><font face="Verdana"><small><a href=https://web.archive.org/20011101000000/http://www.download.com/PC/Result/TitleDetail/0,4,0-20383,1000.html?st.dl.results.list.tdtl>Sonic CD</a></small></font></td>
 <td><font face="Verdana"><small><a href="/sonichq/games/index/cd">Info</a></small></font></td>
 <td><font face="Verdana"><small>?.?? MB</small></font></td></tr>
 
@@ -97,10 +97,10 @@ Here, you can find Sege demos and fan-made Sonic games to download, as well as s
 <p>Sonic 3D Blast Demo includes only the first act and the special stage.
 <p>S&amp;K Collection Demo lets you play the Angel Island Zone with any charater.  The full version includes Sonic 3 &amp; Knuckles, Sonic 3, Sonic &amp; Knuckles, the Sonic Screen Saver, a HUGE archive of WAVs from previous games, and a HUGE collection of great-looking Sonic Art.
 
-<p><img src="http://www.angelfire.com/ok/warpsonic/images/pcsonickbox.jpg"><img src="http://www.angelfire.com/ok/warpsonic/images/pcson3dblstbox.jpg">
+<p><img src="/sonichq/angelfire/images/pcsonickbox.jpg"><img src="/sonichq/angelfire/images/pcson3dblstbox.jpg">
 
 <p><hr color=blue>
-<img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif>
+<img src=/sonichq/angelfire/images/bar1.gif>
 <hr color=blue><br>
 
 </font></table></center>
