--- a/sonichq/images/sprites/index.html
+++ b/sonichq/images/sprites/index.html
@@ -12,15 +12,15 @@
 
 <p><!-- main table top -->
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
-<tr><td width=19><img src=/topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><center><font size=+3 color=4B1FFC face=Verdana>Sprites</font></center></td>
 
-<td width=19><img src=/topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
-<tr><td VALIGN=TOP height=49><center><img src=http://www.angelfire.com/ok/warpsonic/images/bar1.gif></center></td></tr>
+<tr><td VALIGN=TOP height=49><center><img src=/sonichq/angelfire/images/bar1.gif></center></td></tr>
 </table>
 <!-- end main table top -->
 
@@ -28,7 +28,7 @@
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
 <tr><td VALIGN=TOP BGCOLOR=404FE0>&nbsp;</td>
 
-<td VALIGN=TOP width=100% bgcolor=ffffff><center><font face=Verdana><blockquote><br>If you use these sprites on a site, please get permission from those who made them first.  Original sprites by SEGA.<p><hr color=blue width=75%><br>Knuckles' Chaotix Sprites by <a href=mailto:lien_na@hotmail.com>Lien</a> !!!:<p><img src="http://members.spree.com/funNgames/asudem/sprites/knuxwait.gif"><img src="http://members.spree.com/funNgames/asudem/sprites/mightywait.gif"><img src="http://members.spree.com/funNgames/asudem/sprites/espiowait.gif"><img src="http://members.spree.com/funNgames/asudem/sprites/charmywait.gif"><img src="http://members.spree.com/funNgames/asudem/sprites/vectorwait.gif"><p><hr color=blue width=75%><br>Sonic 3D Blast Sprite:<p><img src=3d-runright.gif><p><hr color=blue width=75%><br>Sonic 3 & Knuckles Sprites by <a href="http://www.sonicteam.com/mi/">Lectran</a>:<p><img src=metalsonic/mecha-s3k-chargeup-ani.gif><img src="s3k-eggroboblast.gif"><p><hr color=blue width=75%><br>Sonic Crackers Sprites and Mecha Sonic sprite by <a href=http://www.ncinternet.com/~ronh/>NetRaptor</a>:<br><img src=sonicboogie1.gif> <img src=tailsboogie1.gif><img src="metalsonic/scd-mechafly.gif"><p><hr color=blue width=75%><br>More to come!<br></blockquote></font></center></td>
+<td VALIGN=TOP width=100% bgcolor=ffffff><center><font face=Verdana><blockquote><br>If you use these sprites on a site, please get permission from those who made them first.  Original sprites by SEGA.<p><hr color=blue width=75%><br>Knuckles' Chaotix Sprites by <a href=mailto:lien_na@hotmail.com>Lien</a> !!!:<p><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/sprites/knuxwait.gif"><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/sprites/mightywait.gif"><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/sprites/espiowait.gif"><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/sprites/charmywait.gif"><img src="https://web.archive.org/20011101000000/http://members.spree.com/funNgames/asudem/sprites/vectorwait.gif"><p><hr color=blue width=75%><br>Sonic 3D Blast Sprite:<p><img src=3d-runright.gif><p><hr color=blue width=75%><br>Sonic 3 & Knuckles Sprites by <a href="https://web.archive.org/20011101000000/http://www.sonicteam.com/mi/">Lectran</a>:<p><img src=metalsonic/mecha-s3k-chargeup-ani.gif><img src="s3k-eggroboblast.gif"><p><hr color=blue width=75%><br>Sonic Crackers Sprites and Mecha Sonic sprite by <a href=https://web.archive.org/20011101000000/http://www.ncinternet.com/~ronh/>NetRaptor</a>:<br><img src=sonicboogie1.gif> <img src=tailsboogie1.gif><img src="metalsonic/scd-mechafly.gif"><p><hr color=blue width=75%><br>More to come!<br></blockquote></font></center></td>
 
 <td VALIGN=TOP BGCOLOR=404FE0>&nbsp;</td></tr>
 </table>
@@ -39,8 +39,8 @@
 <tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href=/sonichq/index2.htm target="index2"><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
-<td><img SRC="/bottomleft.gif" BORDER=0 height=20></td>
-<td><img SRC="/bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
